--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "preact": "^10.28.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
