--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
-    "vite": "^7.2.6"
+    "vite": "^7.2.6",
+    "vite-imagetools": "^9.0.2"
   }
 }
